speeves: fix the output for leading zeros on 6NP

--- a/virtual-scenarios-6NP/partials/scenario.detail.html
+++ b/virtual-scenarios-6NP/partials/scenario.detail.html
@@ -137,7 +137,7 @@
             You have completed this scenario.
           </p>
           <p>
-            <span class="glyph alert">&#xf071;</span> Please input the following code in Webcampus to receive credit: <strong>{{scenario.answerCode}}</strong>
+            <span class="glyph alert">&#xf071;</span> Please input the following code in Webcampus to receive credit: <strong>{{("0000"+scenario.answerCode).slice(-4)}}</strong>
           </p>
           <p>
             <span class="glyph alert">&#xf071;</span> Return to the overview and complete any unfinished scenarios!
