--- a/virtual-scenarios-2/partials/home.html
+++ b/virtual-scenarios-2/partials/home.html
@@ -12,7 +12,7 @@
           </p>
           <h2>Scenario Introduction</h2>
           <p>
-            Nurses practice at different levels of informatics competence, according to Staggers et al., 2002. (See pdf of final level of competencies in Articles folder.) To transition to knowledge workers, nurses will have to expand their competencies, while nursing schools will have to incorporate them as learning outcomes in their curricula.  Please note there is a URL in the text on p. 101 that is outdated for Nursing Interventions Classification System (NIC) and Nursing Outcomes Classification (NIC/NOC).  The correct URL is in your syllabus under Week 2. 
+            Nurses practice at different levels of informatics competence, according to Staggers et al., 2002. (See pdf of final level of competencies in Articles folder.) To transition to knowledge workers, nurses will have to expand their competencies, while nursing schools will have to incorporate them as learning outcomes in their curricula. 
           </p>
         </div>
         <p>
