--- a/virtual-scenarios-2/partials/scenario.detail.html
+++ b/virtual-scenarios-2/partials/scenario.detail.html
@@ -94,7 +94,7 @@
           <!-- radios with Feedback -->
           <form ng-if="showIf(question.type, 'radiosFeedback')">
             <div class="choice-set" ng-repeat="choice in question.choices" ng-class="{'correct': assignCorrect('radiosFeedback', $parent.$index, $index, choice), 'incorrect': !assignCorrect('radiosFeedback', $parent.$index, $index, choice)}">
-              <input type="radio" id="{{$parent.$index}}-{{$index}}" name="radios" ng-click="allowNext('radio', $parent.$index, $index, choice); getIndexChoice = $index; changeText($parent.$index, getIndexChoice); getCorrectCSS('radiosFeedback', $parent.$index, $index, choice)">
+              <input type="radio" id="{{$parent.$index}}-{{$index}}" name="radios" ng-click="allowNext('radiosFeedback', $parent.$index, $index, choice); getIndexChoice = $index; changeText($parent.$index, getIndexChoice); getCorrectCSS('radiosFeedback', $parent.$index, $index, choice);">
               <label for="{{$parent.$index}}-{{$index}}">{{choice}}</label>
             </div>
             <p ng-show="!preventAdvance(currentIndex, scenario.questions)">
@@ -103,7 +103,7 @@
               <span class="glyph alert">&#xf071;</span> <em>You will not be able to proceed until you have selected the correct answer.</em>
             </p>
           </form>
-          
+
           <!-- checkboxes -->
           <form ng-if="showIf(question.type, 'checkboxes')" name="checkboxForm" ng-submit="allowNext('checkbox', $index, 0, null, checkboxForm.$valid)" class="checkbox-form" ng-class="{'veil': !unveil[$index]}" novalidate>
             <div class="choice-set" ng-repeat="choice in question.choices" ng-class="{'correct': assignCorrect('checkbox', $parent.$index, $index, choice)}">
